# Enkap-ERP

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  FRONTEND_AUDIT_REPORT.md  GIB_FRONTEND_ROADMAP.md  LICENSE.md  PROD_READY.md  README.md  UI_RULES.md  docker-compose.yml  eksik_filtreler.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json  ui_data_rule.md
.github/workflows/: ci.yml  deploy.yml  mobile.yml
apps/ai-assistant/: CLAUDE.md  Dockerfile  requirements.txt
apps/analytics-service/: CLAUDE.md  package.json
apps/auth-service/: CLAUDE.md  package.json
apps/billing-service/: CLAUDE.md  package.json  tsconfig.json
apps/crm-service/: CLAUDE.md  package.json
apps/financial-service/: CLAUDE.md  package.json
apps/fleet-service/: claude.md  package.json
apps/hr-service/: CLAUDE.md  package.json
apps/manufacturing-service/: CLAUDE.md  package.json
apps/ml-inference/: CLAUDE.md  pyproject.toml
apps/ml-inference/src/: main.py
apps/ml-inference/src/core/: feature_store.py  redis_client.py  tenant_auth.py
apps/ml-inference/src/dags/: anomaly_training_dag.py  cashflow_dag.py  drift_detection_dag.py  sales_forecast_dag.py
apps/ml-inference/src/models/: anomaly_detector.py  cashflow_forecast.py  sales_forecast.py  schemas.py
apps/ml-inference/src/routers/: anomaly.py  drift.py  health.py  predictions.py
apps/ml-inference/src/services/: drift_detector.py  feature_engineering.py  model_registry.py  shap_explainer.py
docs/: QA_PLAN.md
scripts/: golden-seed.ts  verify-seed.ts
tests/: jest.config.ts
(+801 files in other folders)
